updated axis/labels in notebook, figure display

--- a/Calculating Thickness from Colour Information.ipynb
+++ b/Calculating Thickness from Colour Information.ipynb
@@ -4404,8 +4404,8 @@
     "    swatch[:,200:,:] = 255*ret_col[i]\n",
     "    aList[a_i].axis('off')\n",
     "    aList[a_i].imshow(swatch)\n",
-    "    aList[a_i].text(0,400,'measured')\n",
-    "    aList[a_i].text(200,200,'ML colour')\n",
+    "    #aList[a_i].text(0,400,'measured')\n",
+    "    #aList[a_i].text(200,200,'ML colour')\n",
     "    a_i +=1\n",
     "    "
    ]
